--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,8 @@
         </select>
         Responsive Layout:
         <input id='responsive-layout' type='checkbox'>
+        Hide Axes Values:
+	      <input id='hide-Axis' type='checkbox'>
         Select Data:
         <select id='select-data'>
           <option selected value='fake'>Fake Data</option>
