--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,9 @@
     <link href='../css/lab-grapher.css' rel='stylesheet' type='text/css'>
     <link href='examples.css' rel='stylesheet' type='text/css'>
   </head>
+  <script src='http://d3js.org/d3.v3.min.js' type='text/javascript'></script>
+<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
+
   <body>
     <h1>Lab Grapher</h1>
     <div>
